--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
           width: 300px;
         }
       }
+      @media (max-width: 350px) {
+        #quranForm select {
+          width: 200px;
+        }
+        #audioplayer {
+          width: 220px;
+        }
+      }
       label {
         font-weight: bold;
         margin-bottom: 5px;
